<resources>
    <string name="app_name">SofaNBA</string>
    <string name="web_client_id">656238360806-k352q7qdmv52qct1fs1t5ast3fh9livi.apps.googleusercontent.com</string>
    <string name="try_without_an_account">Try without an account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="discover_all_about_nba">Discover all about NBA</string>
    <string name="search_players_and_teams">Search players and teams to get all the inside stats.</string>
    <string name="explore">EXPLORE</string>
    <string name="favorites">FAVORITES</string>
    <string name="seasons">SEASONS</string>
    <string name="settings">SETTINGS</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_players">All players</string>
    <string name="all_teams">All teams</string>
    <string name="favorites_title">Favorites</string>

    <string-array name="SpinnerItems">
        <item>Players</item>
        <item>Teams</item>
    </string-array>

    <string name="title_activity_team">TeamActivity</string>
    <string name="conference">CONFERENCE</string>
    <string name="division">DIVISION</string>
    <string name="teams_in_division">Other teams in the division</string>
    <string name="home_arena">Home Arena</string>
    <string name="at">\@</string>
    <string name="points_divider">-</string>
    <string name="versus">vs</string>
    <string name="regular_season">Regular season</string>
    <string name="playoffs">Playoffs</string>
    <string name="team">TEAM</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="guard">Guard</string>
    <string name="forward">Forward</string>
    <string name="center">Center</string>
    <string name="score_divider">-</string>
    <string name="player_stats">Player stats</string>
    <string name="about">About</string>
    <string name="clear_my_favorites_list">Clear my favorites list</string>
    <string name="vestibulum">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna.</string>
    <string name="more_info">More info</string>
    <string name="sofascore_academy">SofaScore Academy</string>
    <string name="class_2022">Class 2022</string>
    <string name="nba_app">NBA App</string>
    <string name="api_credit">Api credit</string>
    <string name="balldontlie">balldontlie</string>
    <string name="developer">Developer</string>
    <string name="jk">Josip Kelentrić</string>
    <string name="no_results_found">No results found</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="stadium">Stadium</string>
    <string name="match_info">Match info</string>
    <string name="youtube_highlights">Youtube Highlights</string>
    <string name="add_a_youtube_url_to_see_videos_for_this_team">Add a YouTube URL to see videos for this team</string>
    <string name="add_url">Add URL</string>
    <string name="add_youtube_video">Add Youtube video</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="url">URL</string>
    <string name="paste_video_url">Paste video URL</string>
    <string name="video_title">Video title</string>
    <string name="type_a_video_title_ie">Type a video title, ie. Lakers vs. Nets Half time</string>
    <string name="season">Season</string>
    <string name="clear">Clear</string>
    <string name="clear_favorites_list">Clear favorites list?</string>
    <string name="error_deleting_highlight">Error deleting highlight</string>
    <string name="seasons_title">Seasons</string>
    <string name="add_player_photo">Add player photo</string>
    <string name="paste_photo_url">Paste photo url</string>
    <string name="photo_title">Photo title</string>
    <string name="type_a_photo_title_ie">Type a photo title, ie. “LeBron Headshot”</string>
    <string name="manage_photos">Manage photos</string>
    <string name="delete_all_photos">Delete all photos</string>
    <string name="error_deleting_image">Error deleting image</string>
    <string name="favoritebutton">favoriteButton</string>
    <string name="editbutton">editButton</string>
    <string name="hometeamlogo">homeTeamLogo</string>
    <string name="awayteamlogo">awayTeamLogo</string>
    <string name="please_insert_value">Please insert value</string>
    <string name="enter_valid_url">Please enter a valid url</string>
    <string name="youtube_url">Please enter a URL from YouTube</string>
    <string name="fitler_matches">Filter Matches</string>
    <string name="apply">Apply</string>
    <string name="undefined">Undefined</string>
    <string name="search">Search</string>
    <string name="unit_type">Unit type</string>
    <string name="metric_cm_kg">Metric (cm, kg)</string>
    <string name="imperial_ft_lb">Imperial (ft, lb)</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No internet connection, connect to WiFi or mobile data and try again.</string>
    <string name="favorites_list_is_clear">Favorites list is clear</string>
    <string name="what_are_you_favorite_nba_teams">What are you favorite NBA teams?</string>
    <string name="you_can_choose_more_than_one">You can choose more than one.</string>
    <string name="eastern_conference">Eastern Conference</string>
    <string name="continue_text">Continue</string>
    <string name="skip">Skip</string>
    <string name="western_conference">Western conference</string>

    <string-array name="seasons">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
    </string-array>
</resources>