<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="364dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_bottomsheet_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_player_photo"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlContainer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUrl"
            android:tag="URL"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_text_input"
            android:hint="@string/url" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:text="@string/paste_photo_url"
        android:theme="@style/AssistiveNLv2Left"
        app:layout_constraintTop_toBottomOf="@id/urlContainer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_text_input"
            android:hint="@string/photo_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:text='@string/type_a_photo_title_ie'
        android:theme="@style/AssistiveNLv2Left"
        app:layout_constraintTop_toBottomOf="@id/titleContainer" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleContainer" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>