<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LoginActivityTheme"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleY="1.2"
        android:scaleX="1.2"
        android:src="@drawable/ic_nba" />

    <ImageView
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_nba_full_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="216dp"
        android:text="@string/discover_all_about_nba"
        android:textColor="@color/white"
        android:theme="@style/DisplayExtraLargeNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/search_players_and_teams"
        android:textColor="@color/white"
        android:theme="@style/HeadlineMediumOnColorLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiscover" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toTopOf="@id/btnNoAcc"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNoAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/background_button_login"
        android:text="@string/try_without_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>